policy-controller/governance/node-port-block.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
  annotations:
    # Only applies to clusters matching this selector in your Git repo
    configmanagement.gke.io/cluster-selector: resource-enforced-clusters
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    namespaces:
      - "test"
      - "default"
    excludedNamespaces: []
      # - "kube-system"      # Example: Policy will ignore this
      # - "gatekeeper-system" # Example: Policy will ignore this
      # - "config-management-system"
