policy-controller/governance/test-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: fleet-restrict-public-images
spec:
  enforcementAction: dry-run
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
    # Usually we exclude kube-system to prevent breaking cluster-internal tools
    excludedNamespaces: ["kube-system", "config-management-system"]
  parameters:
    repos:
      - "gcr.io/my-secure-project/"       # Google Container Registry
      - "us-docker.pkg.dev/my-project/"  # Artifact Registry (Recommended)
      - "eu.gcr.io/my-secure-project/"
