policy-controller/governance/test-node-selector.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port-123
  annotations:
    # Apply only to clusters whose ConfigManagement.spec.clusterName is 'gke-prod-1' or 'gke-prod-2'.
    configsync.gke.io/cluster-name-selector: my-private-cluster1
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    namespaces:
      - "test"
      - "default"
    excludedNamespaces: []
